# SegFaultExp

./: .gitignore  ArmKinematics.py  ArmVisualiser.py  DHTable.py  README.md  cArmKinematics.py  cDHTable.py  cInverseKinematics.py  cWorkspacePlotter.py  claude.py  main.py  readme.txt  workspacePlotter.py
A1/: README.md  cArmKinematics.py  cArmVisualiser.py  cDHTable.py  cInverseKinematics.py  cWorkspacePlotter.py  main.py
A2/Question2_Solution/: network.py  train_final.py  vis_utils.py
A2/Question3_Solution/: detection_stats_2025-04-06_17-00-36.csv  detection_stats_2025-04-06_17-45-36.csv  detection_stats_2025-04-06_17-50-34.csv  train_final.py
A3/CustomTrain/: Img2Pickle.py  Unpickle.py
A3/CustomTrain/rosbag2_2025_03_20-16_49_11/: metadata.yaml
A3/P1_KalmanFilter/: EKF.ipynb  EKF.py  KF.ipynb  KF.py  lmks.txt
A3/pathfinder/install/testing/share/testing/: package.sh  package.xml
A3/scraps/: jestin1.txt  jestin2.txt
Assignment2/Question2_Solution/: README.md  Unpickle.py  dataset.py
Assignment2/Question3_Solution/: ImageCropper.py  ModelDeploy.py  cPedestrian.py  dataset.py  detection_stats_2025-04-06_17-34-52.csv  edge_detection.py  network.py
Computer_Vision_Model/YOLO/: README.md  requirements.txt
Question1/: ArmKinematics.py  ArmVisualiser.py  DHTable.py  cArmKinematics.py  cArmVisualiser.py  cDHTable.py  main.py
Question2/: ArmKinematics2.py  ArmVisualiser2.py  DHTable2.py  IK.py  cArmKinematics2.py  cDHTable2.py  cInverseKinematics.py  cWorkspacePlotter.py  main2.py  workspacePlotter.py
major/ServoController/: ServoController.ino
(+1120 files in other folders)
